# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import productsRouter from "./products";
+import ordersRouter from "./orders";
+import paystackRouter from "./paystack";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(productsRouter);
+router.use(ordersRouter);
+router.use(paystackRouter);
 
 export default router;
